src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>Active_Projects_Count__c</fullName>
        <label>Active Projects Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Name__c</fullName>
        <label>Budget Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Remaining__c</fullName>
        <label>Budget Remaining</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Completed_Projects_Count__c</fullName>
        <label>Completed Projects Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Savings_Total__c</fullName>
        <label>Demand Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demand_Savings__c</fullName>
        <label>Demand Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Kw_Installed_Total__c</fullName>
        <label>Kw Installed Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kw_Installed__c</fullName>
        <label>Kw Installed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kwh_Generated__c</fullName>
        <label>Kwh Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kwh_Saved__c</fullName>
        <label>Kwh Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kwh_Total__c</fullName>
        <label>Kwh Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Budget__c</fullName>
        <label>Program Budget</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Program_Description__c</fullName>
        <label>Program Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Program_Id__c</fullName>
        <description>Deprecated as External Id for Program</description>
        <inlineHelpText>Deprecated as External Id for Program</inlineHelpText>
        <label>Program Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebate_Amount__c</fullName>
        <label>Rebate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebate_Eligibility_Details__c</fullName>
        <label>Rebate Eligibility Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rebates_Paid__c</fullName>
        <label>Rebates Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebates_Total__c</fullName>
        <label>Rebates Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>Deprecated in favor of field Sectors__c, as sectors will be a multi value text from DSMC.</description>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sectors__c</fullName>
        <label>Sectors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sector</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>Deprecated in favor of field Service_Types__c, as it will be a multi value text from DSMC.</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Types__c</fullName>
        <label>Service Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Renewable</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <label>Status Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therm_Saved__c</fullName>
        <label>Therm Saved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therm_Total__c</fullName>
        <label>Therm Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Savings_Total__c</fullName>
        <label>Water Savings Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Savings__c</fullName>
        <label>Water Savings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>